fix(card): ensure arrow icons stays right-aligned

--- a/components/Card/src/Card/card.scss
+++ b/components/Card/src/Card/card.scss
@@ -39,6 +39,7 @@
   left: var(--denhaag-card-arrow-left);
   position: var(--denhaag-card-arrow-position);
   right: var(--denhaag-card-arrow-right);
+  margin-inline-start: auto;
 }
 
 .denhaag-card__title {
